[package]
name = "RBust"
version = "0.1.0"
authors = ["iinc0gnit0 <iinc0gni0t@pm.me>", "skript0r <skript0r@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
tokio = {version = "0.2.20", features = ["macros"]}