[package]
name = "RBust"
version = "0.1.3"
authors = ["inc0gnit0 <iinc0gni0t@pm.me>", "skript0r <skript0r@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "0.9.2"
rayon = "1.3.0"
clap = "2.33.1"