[package]
name = "RBust"
version = "0.1.9"
authors = ["inc0gnit0 <iinc0gni0t@pm.me>", "skript0r <skript0r@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "1.7.2"
rayon = "1.5.2"
clap = "2.34.0"
chrono = "0.4.22"
openssl = {version = "0.10.41", features = ["vendored"]}
